# rust-prettier

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: config.rs  lib.rs
src/common/: end_of_line.rs  mod.rs
src/document/: builders.rs  debug.rs  mod.rs  printer.rs
src/document/utils/: mod.rs  traverse_docs.rs
src/languages/: mod.rs
src/languages/javascript/: ast_to_doc.rs  mod.rs
src/languages/javascript/print/: export.rs  import.rs  mod.rs  module.rs
src/languages/javascript/print/expression/: array.rs  mod.rs
src/languages/javascript/print/statement/: function.rs  loops.rs  mod.rs
tests/: README.md  mod.rs
tests/unit/: build_and_print_docs.rs  mod.rs  printer.rs  strip_trailing_hardline.rs  traverse_doc.rs
