[package]
name = "rust-prettier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_builder = "0.12"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0"
thiserror = "1.0"


[build-dependencies]
anyhow = "1.0"
cfg-if = "1.0"
convert_case = "0.6"
git2 = "0.18"
md5 = "0.7"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
