[package]
name = "rust-prettier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_builder = "0.12"
git2 = "0.18"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0"
thiserror = "1.0"
unicode-width = "0.1.11"

[build-dependencies]
anyhow = "1.0"
cfg-if = "1.0"
convert_case = "0.6"
git2 = "0.18"
md5 = "0.7"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[features]
default = []
generated_tests = []
