[package]
name = "rust-prettier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_builder = "0.12"
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0"
thiserror = "1.0"
unicode-width = "0.1.11"
wasm-bindgen = { version = "0.2", optional = true }
pretty_assertions = { version = "1.4", optional = true }

biome_js_parser = "0.1.0"
biome_parser = "0.1.0"
biome_js_syntax = "0.1.0"
biome_rowan = "0.1.0"


[build-dependencies]
anyhow = "1.0"
cfg-if = "1.0"
convert_case = "0.6"
git2 = "0.18"
md5 = "0.7"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[features]
default = []
generated_tests = ["pretty_assertions"]
wasm = ["wasm-bindgen"]


[[test]]
name = "unit"
path = "tests/unit/mod.rs"

# [[test]]
# name = "generated"
# path = "tests/generated/mod.rs"
# required-features = ["generated_tests"]

[[test]]
name = "generated_angular"
path = "tests/generated/angular/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_css"
path = "tests/generated/css/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_flow"
path = "tests/generated/flow/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_flow_repo"
path = "tests/generated/flow_repo/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_graphql"
path = "tests/generated/graphql/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_handlebars"
path = "tests/generated/handlebars/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_html"
path = "tests/generated/html/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_js"
path = "tests/generated/js/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_json"
path = "tests/generated/json/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_jsx"
path = "tests/generated/jsx/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_less"
path = "tests/generated/less/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_lwc"
path = "tests/generated/lwc/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_markdown"
path = "tests/generated/markdown/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_mdx"
path = "tests/generated/mdx/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_misc"
path = "tests/generated/misc/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_mjml"
path = "tests/generated/mjml/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_scss"
path = "tests/generated/scss/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_stylefmt_repo"
path = "tests/generated/stylefmt_repo/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_typescript"
path = "tests/generated/typescript/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_vue"
path = "tests/generated/vue/mod.rs"
required-features = ["generated_tests"]

[[test]]
name = "generated_yaml"
path = "tests/generated/yaml/mod.rs"
required-features = ["generated_tests"]
